fix: popup_image z-index: 2

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -20,19 +20,6 @@
   display: none;
 }
 
-.popup_edit {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, .5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  display: none;
-}
-
 .popup_image {
   position: fixed;
   top: 0;
@@ -43,6 +30,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 2;
   display: none;
 }
 
